2005-08-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/imm32.def (ImmDisableIME): Add stub.
	Thanks to: "kidmin"  <kidmin at users dot sourceforge dot net>

2005-08-10  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.3.
	* Makefile.in: Ditto.

2005-07-28  Earnie Boyd  <earnie@users.sf.net>

	* include/winnt.h (SUBLANG_PORTUGUESE, SUBLANG_PORTUGUESE_BRAZILIAN):
	Correct their values.
	Thanks to: Daniel K. O. <danielosmari at users dont sf dot net>

2005-07-25  Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (HSHELL_RUDEAPPACTIVATED): Define.

2005-07-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (TT_PRIM_CSPLINE): Define.
	Thanks to: Bob Jamison <ishmal at users dot sourceforge dot net>

2005-07-20  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/richedit.h (SETTEXTEX): Define structure and
	associated constants.
	(GT_SELECTION): Define GETTEXTEX flag constant. 

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (SYSPAL_NOSTATIC256): Define.

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (WINGDIAPI): Define to DECLSPEC_DLLIMPORT
	if __W32API_USE_DLLIMPORT__.   Use throughout to qualify
	prototypes.

2005-07-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (RBBS_USECHEVRON): Define.
	(RBBS_*): Use hex notation, group together.

2005-07-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/kernel32.def (GetUserGeoID): Correct suffix.
	Thanks to: "bernd23" <bernd23 at users dot sourceforge dot net>

2005-07-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (TreeView_SetItemState): Initilise
	_tvi.hItem.
	Thanks to:  Joseph Remes <jremes at users dot sourceforge dot net>

2005-07-18  Mattia Barbon  <mbarbon@users.sourceforge.net>

	* include/commctrl.h (NMLVFINDITEM): Add structure.
