@@ -1,5 +1,12 @@
 2005-08-12  Danny Smith  <dannysmith@users.sourceforge.net>
 
+	* include/ddk/hidsdi.h:  New file.
+	* lib/ddk/hid.def: Uncomment symbols and add stdcall suffix for
+	functions declared in hidsdi.h.
+	Thanks to:  Alex J Lennon  <ajlennon at organixconsulting dot com>
+
+2005-08-12  Danny Smith  <dannysmith@users.sourceforge.net>
+
 	* lib/imm32.def (ImmDisableIME): Add stub.
 	Thanks to: "kidmin"  <kidmin at users dot sourceforge dot net>
 
